<resources>

    <string name="app_name">Fighterjets</string>
    <string name="action_settings">Settings</string>
    <string name="namebutton">Name</string>
    <string name="countrybutton">Country</string>
    <string name="picturesbutton">Pictures</string>
    <string name="thousandbutton">>1,000 produced</string>
    <string name="infobutton">Info</string>
    <string name="statusbutton">Status</string>
    <string name="fighterjets"></string>
    <string name="figherjetname"></string>
    <string name="figherjetsdata"></string>
    <string name="firstflight">Year of First Flight</string>
    <string name="backbutton">Back</string>
    <string name="nextbutton">Next</string>
    <string name="yearbutton">New</string>
    <string name="picturename">picturename</string>
    <string name="pictures">Pictures</string>
    <string name="yearninetiesbutton">90s</string>
    <string name="yeareightiesbutton">80s</string>
    <string name="yearseventiesbutton">70s</string>
    <string name="yearsixtiesbutton">60s</string>
    <string name="yearfiftiesbutton">50s</string>
    <string name="yearfortiesbutton">40s</string>
    <string name="yearthirtiesbutton">30s</string>
    <string name="yeartwentiesbutton">20s</string>
    <string name="yeareighteentonineteenbutton">1918-19</string>
    <string name="yearfourteentoseventeenbutton">1914-17</string>
    <string name="yearthirteenbutton">1913</string>
    <string name="argentina">Argentina</string>
    <string name="australia">Australia</string>
    <string name="austrohungarianempire">Austro-Hungarian Empire</string>
    <string name="belgium">Belgium</string>
    <string name="canada">Canada</string>
    <string name="chile">Chile</string>
    <string name="chinaprc">China (PRC)</string>
    <string name="chinaprcpakistan">China (PRC), Pakistan</string>
    <string name="czechoslovakia">Czechoslovakia</string>
    <string name="denmark">Denmark</string>
    <string name="egypt">Egypt</string>
    <string name="estonia">Estonia</string>
    <string name="finland">Finland</string>
    <string name="france">France</string>
    <string name="francegermanempire">France,German Empire</string>
    <string name="francenetherlands">France,Netherlands</string>
    <string name="germanempire">German Empire</string>
    <string name="germany3rdreich">Germany - 3rd Reich</string>
    <string name="germanyfederalrepublic">Germany - Federal Republic</string>
    <string name="germanyweimarrepublic">Germany - Weimar Republic</string>
    <string name="hungary">Hungary</string>
    <string name="india">India</string>
    <string name="indiaunitedkingdom">India, United Kingdom</string>
    <string name="iran">Iran</string>
    <string name="israel">Israel</string>
    <string name="italy">Italy</string>
    <string name="japan">Japan</string>
    <string name="japanunitedstates">Japan, United States</string>
    <string name="latvia">Latvia</string>
    <string name="lithuania">Lithuania</string>
    <string name="mexico">Mexico</string>
    <string name="netherlands">Netherlands</string>
    <string name="norway">Norway</string>
    <string name="poland">Poland</string>
    <string name="romania">Romania</string>
    <string name="russia">Russia</string>
    <string name="russiaindia">Russia, India</string>
    <string name="russianempire">Russian Empire</string>
    <string name="siam">Siam</string>
    <string name="southafrica">South Africa</string>
    <string name="southkorea">South Korea</string>
    <string name="southkoreaindonesia">South Korea, Indonesia</string>
    <string name="spain">Spain</string>
    <string name="spaingermany3rdreich">Spain, Germany - 3rd Reich</string>
    <string name="sweden">Sweden</string>
    <string name="switzerland">Switzerland</string>
    <string name="taiwan">Taiwan</string>
    <string name="taiwanroc">Taiwan (ROC)</string>
    <string name="turkey">Turkey</string>
    <string name="ussr">USSR</string>
    <string name="unitedkingdom">United Kingdom</string>
    <string name="unitedkingdomfrance">United Kingdom, France</string>
    <string name="unitedkingdomgermanyfederalrepublicitalyspain">United Kingdom, Germany - Federal Republic, Italy, Spain</string>
    <string name="unitedkingdomjapan">United Kingdom, Japan</string>
    <string name="unitedstates">United States</string>
    <string name="unitedstatesunitedkingdom">United States, United Kingdom</string>
    <string name="yugoslavia">Yugoslavia</string>
    <string name="info">Search Fighter Database</string>
    <string name="helpbutton">Help</string>
    <string name="help">Fighterjets contains facts and history of hundreds of fighter aircraft.  There is a page for every fighter, dozens of images and a searchable database.  The Year buttons reveal fighters whose first flight occurred in that time period.  The <b>Pictures</b> button allows you to scroll through a long list of fighter images.  Images are only available for aircraft whose status is operational, project or prototype.  The <b>Name</b> button reveals the entire list of fighters.  The <b>Search Fighter Database</b> button allows you to search the database of text associated wth every fighter.  Search terms are <b>NOT</b> case-sensitive.  Please <b>DO NOT</b> use quotes because search phrases are automatically quoted.  Each word or exact phrase in your search text should be separated by a comma.  Examples of good search choices\n<b>chuck yeager, sound barrier</b>\n<b>nuclear, japan</b>\n<b>Paul Metz, raptor</b>\n<b>supersonic</b>\n<b>hot,fire,gun,a,b,c,d,e,f</b>\nWord fragments do work and so <b>ockheed</b> will find what you expect.  You can have many many search terms separated by commas.  Searching without any search terms will cause you to be visited by an aircraft that you would rather not encounter.\nAlmost all text and imagery are under the license found here: en.wikipedia.org/wiki/Wikipedia:Text_of_Creative_Commons_Attribution&#8211;ShareAlike_3.0_Unported_License\nThanks to fighter aircraft mechanics, engineers, pilots, scientists and enthusiasts everywhere and to the wiki editors who wrote the information found here.  There are errors and omissions in this data.  Get the most accurate and up to date information here en.wikipedia.org/wiki/List_of_fighter_aircraft\n</string>

</resources>